--- a/homeauto-center-websocket/src/main/resources/bootstrap-test.properties
+++ b/homeauto-center-websocket/src/main/resources/bootstrap-test.properties
@@ -1,4 +1,4 @@
 spring.cloud.nacos.config.server-addr=52.130.74.113:8848
-spring.cloud.nacos.config.namespace=45962b69-1266-4973-8ec5-728299a98747
-spring.cloud.nacos.config.group=home-auto-test
+spring.cloud.nacos.config.namespace=4d2a4883-79a0-4867-bd7b-06f6bb5281b0
+spring.cloud.nacos.config.group=home-auto
 spring.cloud.nacos.config.file-extension=yaml
