--- a/homeauto-center-websocket/pom.xml
+++ b/homeauto-center-websocket/pom.xml
@@ -45,6 +45,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.neovisionaries</groupId>
+            <artifactId>nv-websocket-client</artifactId>
+            <version>2.10</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
