--- a/homeauto-center-websocket/src/main/resources/bootstrap-local.yml
+++ b/homeauto-center-websocket/src/main/resources/bootstrap-local.yml
@@ -6,3 +6,4 @@ spring:
         namespace: 45962b69-1266-4973-8ec5-728299a98747
         group: home-auto
         file-extension: yaml
+debug: true
