--- a/homeauto-center-websocket/pom.xml
+++ b/homeauto-center-websocket/pom.xml
@@ -12,11 +12,6 @@
     <artifactId>homeauto-center-websocket</artifactId>
 
     <dependencies>
-        <!--websocket-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-websocket</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
@@ -51,6 +46,12 @@
                     <artifactId>spring-boot-starter-data-redis</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.yeauty</groupId>
+            <artifactId>netty-websocket-spring-boot-starter</artifactId>
+            <version>0.9.5</version>
         </dependency>
     </dependencies>
 
