--- a/homeauto-center-oauth/src/main/resources/bootstrap.yml
+++ b/homeauto-center-oauth/src/main/resources/bootstrap.yml
@@ -2,6 +2,6 @@ spring:
   profiles:
     active: local
   application:
-    name: homeauto-center-oauth
+    name: homeauto-center-oauth-v3
 server:
   port: 10012
