--- a/homeauto-center-device/src/main/resources/bootstrap.yml
+++ b/homeauto-center-device/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   profiles:
     active: local
   application:
-    name: homeauto-center-device
+    name: homeauto-center-device-v3
 server:
   port: 10015
   servlet:
