--- a/homeauto-center-file/src/main/resources/bootstrap.yml
+++ b/homeauto-center-file/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   profiles:
     active: local
   application:
-    name: homeauto-center-file
+    name: homeauto-center-file-v3
 
 server:
   port: 10014
