--- a/homeauto-center-gateway/src/main/resources/bootstrap.yml
+++ b/homeauto-center-gateway/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   profiles:
     active: local
   application:
-    name: homeauto-center-gateway
+    name: homeauto-center-gateway-v3
 
 server:
   port: 10013
