--- a/homeauto-contact-screen/src/main/resources/bootstrap.yml
+++ b/homeauto-contact-screen/src/main/resources/bootstrap.yml
@@ -2,6 +2,6 @@ spring:
   profiles:
     active: local
   application:
-    name: homeauto-contact-screen
+    name: homeauto-contact-screen-v3
 server:
   port: 10011
