拷贝相关优化代码

--- a/homeauto-center-id-v3/pom.xml
+++ b/homeauto-center-id-v3/pom.xml
@@ -11,7 +11,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <name>homeauto-center-id</name>
+    <name>homeauto-center-id-v3</name>
     <description>id generate</description>
 
 
