--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <name>homeauto</name>
+    <name>homeauto-v3</name>
     <description>landleaf home auto</description>
 
 
