--- a/homeauto-center-websocket-v3/src/main/resources/bootstrap-prod.yml
+++ b/homeauto-center-websocket-v3/src/main/resources/bootstrap-prod.yml
@@ -2,32 +2,7 @@ spring:
   cloud:
     nacos:
       config:
-        server-addr: 47.103.46.148:8848
-        namespace: 4e4001db-03cf-4b9b-a90a-ec5bdd4a8821
-        group: home-auto
+        server-addr: 47.117.51.55:8848
+        namespace: cc200b94-8808-4f09-87ad-11b743c7a80a
+        group: home-auto-v3
         file-extension: yaml
-  ## redis链接
-  redis:
-    database: 1
-    ## 如果是单点的redis，打开以下配置 start
-    host: 172.16.0.89
-    port: 16379
-    ## 单点redis配置结束 end
-    password: landleaf@123.com
-    ## 如果是sentinel，打开以下配置 start
-    #    sentinel:
-    #      master: smarthomeredis
-    #      nodes: [52.130.74.157:26379,52.130.74.157:26380,52.130.74.157:26381]
-    ## sentinel配置结束
-    lettuce:
-      pool:
-        # 连接池中的最大空闲连接 默认8
-        max-idle: 8
-        # 连接池中的最小空闲连接 默认0
-        min-idle: 0
-        # 连接池最大连接数 默认8 ，负数表示没有限制
-        max-active: 50
-        # 连接池最大阻塞等待时间（使用负值表示没有限制） 默认-1
-        max-wait: -1ms
-        time-between-eviction-runs: 30000ms
-    timeout: 30000ms
