增加sentinel流量监控与熔断服务

--- a/homeauto-center-id-v3/src/main/resources/bootstrap.yml
+++ b/homeauto-center-id-v3/src/main/resources/bootstrap.yml
@@ -3,5 +3,10 @@ spring:
     active: local
   application:
     name: homeauto-center-id-v3
+
 server:
   port: 10024
+
+feign:
+  sentinel:
+    enabled: true
