--- a/homeauto-center-device-v3/src/main/resources/bootstrap.yml
+++ b/homeauto-center-device-v3/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: prod
+    active: local
   application:
     name: homeauto-center-device-v3
 server:
@@ -8,3 +8,6 @@ server:
   servlet:
     context-path: /device
 
+feign:
+  sentinel:
+    enabled: true
