--- a/homeauto-center-gateway-v3/pom.xml
+++ b/homeauto-center-gateway-v3/pom.xml
@@ -53,7 +53,10 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
-
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-alibaba-sentinel-gateway</artifactId>
+        </dependency>
     </dependencies>
 
 
