小程序获取家庭房间普通设备；小程序获取系统子设备；小程序获取系统设备；小程序下发命令修改增加设备类型标记；小程序系统设备获取状态处理

--- a/homeauto-center-gateway-v3/src/main/resources/bootstrap.yml
+++ b/homeauto-center-gateway-v3/src/main/resources/bootstrap.yml
@@ -9,3 +9,11 @@ server:
 feign:
   sentinel:
     enabled: true
+
+
+hystrix:
+  command:
+    default:
+      execution:
+        timeout:
+          enabled:
