获取楼层房间设备修改

--- a/homeauto-center-device-v3/src/main/resources/bootstrap.yml
+++ b/homeauto-center-device-v3/src/main/resources/bootstrap.yml
@@ -1,13 +1,9 @@
 spring:
   profiles:
-    active: test
+    active: local
   application:
     name: homeauto-center-device-v3
 server:
   port: 10015
   servlet:
     context-path: /device
-
-feign:
-  sentinel:
-    enabled: true
