修改配置文件

--- a/homeauto-center-device-v3/src/main/resources/bootstrap-prod3.yml
+++ b/homeauto-center-device-v3/src/main/resources/bootstrap-prod3.yml
@@ -6,3 +6,5 @@ spring:
         namespace: b2d5f28f-de3f-4b21-92bc-5145c62eb944
         group: home-auto-v3
         file-extension: yaml
+      discovery:
+        ip: 106.14.33.53
